# hw-attest-verify

./: DANGER-IMPORTANT-READ-FIRST.md  README.md  pyproject.toml
hw_attest_verify/: __init__.py  __main__.py  issuer_key_discovery.py  mode1.py  mode2.py  parse.py
tests/: test_mode2.py  test_parse.py
